Reduced use of external CDNs, bootstrap CDN replaced.  Only init mobile slideshow on mobile  Commented out old gulp scripts relating to ticketing for later removal  Introduction of performance issues?
 On branch 2018

 Changes to be committed:
	modified:   Scripts/App/main.js
	new file:   Scripts/Base/GMap.js
	new file:   Scripts/Bootstrap/bootstrap.min.js
	new file:   Scripts/BootstrapExtras/tether.min.js
	new file:   Scripts/JQuery/jquery-3.2.1.min.js
	modified:   gulpfile.js
	modified:   homePage.html
	modified:   partialPages/footer.html
	modified:   partialPages/header.html
	new file:   sass/bootstrap.min.scss
	new file:   sass/external/animate.min.css
	new file:   sass/external/bootstrap.min.css
	new file:   sass/partials/_animate.min.scss
	modified:   sass/screen.scss

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,6 +4,7 @@
 @import "partials/mixins";
 @import "partials/base";
 @import "compass/css3";
+@import "partials/animate.min";
 @import "partials/swiper.min";
 
 // Put the ticketing page styles into the main css
@@ -746,7 +747,7 @@ body, html {
 #mapContainer{
     height: 400px;
     display: inline-block;
-    box-shadow: 0 0px 20px 2px #000;
+    box-shadow: 0 0px 20px 2px rgba(0,0,0,0.31);
     float: left;
     width: 75%;
     overflow: auto;
